[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/backgrounds/city_night.png" type="Texture" id=1]
[ext_resource path="res://Assets/breakdot.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/level_editor.png" type="Texture" id=4]
[ext_resource path="res://Assets/exit.png" type="Texture" id=5]
[ext_resource path="res://Assets/load_level.png" type="Texture" id=6]
[ext_resource path="res://Assets/play.png" type="Texture" id=7]
[ext_resource path="res://Assets/sfx/menu_select.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/sfx/menu_selected.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/music/Ludum Dare 28 - Track 4.wav" type="AudioStream" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float time_factor = 3;
uniform bool playing = false;

void vertex(){
	if(playing){
		VERTEX.x += cos(TIME * time_factor + VERTEX.x + VERTEX.y) * 10.0;
		VERTEX.y += sin(TIME * time_factor + VERTEX.x) * 0.10;		
	}
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.563, 0.563 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="breakdot" type="Sprite" parent="."]
position = Vector2( 512, 96 )
scale = Vector2( 0.866158, 0.866158 )
texture = ExtResource( 2 )

[node name="MenuOptions" type="Node2D" parent="."]

[node name="play" type="Sprite" parent="MenuOptions"]
material = SubResource( 2 )
position = Vector2( 512, 240 )
texture = ExtResource( 7 )

[node name="load_level" type="Sprite" parent="MenuOptions"]
material = SubResource( 3 )
position = Vector2( 512, 336 )
texture = ExtResource( 6 )

[node name="level_editor" type="Sprite" parent="MenuOptions"]
material = SubResource( 4 )
position = Vector2( 512, 424 )
texture = ExtResource( 4 )

[node name="exit" type="Sprite" parent="MenuOptions"]
material = SubResource( 5 )
position = Vector2( 512, 512 )
texture = ExtResource( 5 )

[node name="Sfx" type="Node" parent="."]

[node name="MenuSelect" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 9 )
bus = "SoundEffect"

[node name="MenuSelected" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 10 )
bus = "SoundEffect"

[node name="Music" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 11 )
autoplay = true
bus = "Music"
